--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -28,5 +28,5 @@ jobs:
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           ACCESS_SECRET: ${{ secrets.ACCESS_SECRET }}
-        run: python remove_tweeets.py
+        run: my_twitter_bot.py
           
