--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -1,29 +1,29 @@
-# name: delete
+name: delete
 
-# on: push
+on: push
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
 
-#       - name: checkout repo content
-#         uses: actions/checkout@v2 # checkout the repository content to github runner
+      - name: checkout repo content
+        uses: actions/checkout@v3 # checkout the repository content to github runner
 
-#       - name: setup python
-#         uses: actions/setup-python@v2
-#         with:
-#           python-version: '3.8.10' # install the python version needed
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10.8' # install the python version needed
+
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           
-#       - name: install python packages
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
-          
-#       - name: execute py script
-#         env:
-#           CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
-#           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
-#           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
-#           ACCESS_SECRET: ${{ secrets.ACCESS_SECRET }}
-#         run: python remove_tweeets.py
+      - name: execute py script
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
+          ACCESS_SECRET: ${{ secrets.ACCESS_SECRET }}
+        run: python my_twitter_bot.py
